CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2019
Various contributors (see below, and AUTHORS.txt)
http://www.tuxpaint.org/

$Id$

2019.Sep.12 (0.9.24)
  * New tools
    ---------
    * Fill
      Not actually a new tool, but promoted from a "Magic" tool
      to a full-fledge tool in the "Tools" bar.

  * Ports & Building
    ----------------
    * Updates to build on Haiku.
      Luc 'Begasus' Schrijvers <begasus@gmail.com>

  * Bug Fixes
    ---------
    * Correct issue that prevented Tux Paint from lauching on Mac OS X 10.7.
      (See https://sourceforge.net/p/tuxpaint/tuxpaint/ci/d2ef2e17d1962111d0f6f91394dce81e8706d48b/
      and https://stackoverflow.com/questions/20206985/xcode-linking-against-applicationservices-framework-with-sdk-10-9-causes-10-7)
      Mark K. Kim <mkkim214@gmail.com>

    * Reduce launch time by calling progress bar less frequently
      while loading stamps.
      Mark K. Kim <mkkim214@gmail.com>

    * Ability to bring up the print dialog from the macOS build was
      removed in Tux Paint 0.9.23 to support the new build mechanism.
      It has been re-added.  To access it, option-click the print icon,
      or configure Tux Paint to always bring up the dialog upon print.
      Mark K. Kim <mkkim214@gmail.com>

  * Other Improvements
    ------------------
    * Added ability to move color palette options to the end of
      the New dialog, for situations where users are meant to start
      drawings with specific Starters or Templates.
      Use "--newcolorslast" option.
      (Suggested by Bernard Verhaeghe)

    * Recognize signals (SIGUSR1 and SIGUSR2) on POSIX systems,
      which causes Tux Paint to quit, first saving the current drawing
      (if unsaved) (like "--autosave"), either saving a new image
      (like "--saveovernew") (via SIGUSR1), or overwritting the current
      drawing (like "--saveover") (via SIGUSR2).
      (Thanks to Flavio Airundo for the idea; closes